@@ -1,0 +1,3 @@
+if mods["SchallCircuitGroup"] then
+  data.raw.item["cybersyn-constant-combinator"].subgroup = "circuit-combinator"
+end
