@@ -1,3 +1,5 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.0.0
 Date: ????
+  Changes:
+    - [item=cybersyn-constant-combinator] Change subgroup to circuit-combinator if SchallCircuitGroup is installed.
